--- a/assets/common/global.css
+++ b/assets/common/global.css
@@ -1,5 +1,8 @@
 body {
-    font-family: Arial,  sans-serif;
+    --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
+    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
+    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+    --font-lugrasimo: "Lugrasimo", serif;
 }
 
 :root {
